# verl-hardware-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
docs/: development.md
scripts/: check_bytedance_copyright.py  check_license.py
tests/: test_plugin_registration.py
verl_hardware_plugin/: __init__.py
verl_hardware_plugin/engines/: fsdp_flagos.py  fsdp_metax.py  fsdp_mlu.py  fsdp_xpu.py  megatron_flagos.py  megatron_metax.py  megatron_mlu.py  megatron_xpu.py
verl_hardware_plugin/utils/: config_manager.py
