[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl-hardware-plugin"
version = "0.1.0"
description = "Multi-chip hardware platform and engine plugins for verl"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "verl>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."verl.plugins"]
hardware = "verl_hardware_plugin"

[tool.setuptools.packages.find]
include = ["verl_hardware_plugin*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
isort = {known-first-party = ["verl_hardware_plugin", "verl"]}
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # logging format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # `.log()` statement uses f-string
    "G004",
    # X | None for type annotations
    "UP045",
    # deprecated import
    "UP035",
]

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"
